Most simple workitem overview
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@132 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/templates/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/templates/main-template.xhtml
@@ -9,6 +9,7 @@
 		<a4j:form>
 			<h:panelGrid id="grid" columns="2" cellspacing="4">
 				<rich:dropDownMenu value="Time4U">
+					<rich:menuItem submitMode="ajax" value="Overview" action="/user/main.xhtml"/>
 					<rich:menuItem submitMode="ajax" value="Logout"
 						action="#{identity.logout}" />
 				</rich:dropDownMenu>
