Prepared improved report generation
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@152 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/templates/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/templates/main-template.xhtml
@@ -7,11 +7,16 @@
 
 	<ui:define name="content">
 		<a4j:form>
-			<h:panelGrid id="grid" columns="2" cellspacing="4">
+			<h:panelGrid id="grid" columns="3" cellspacing="4">
 				<rich:dropDownMenu value="Time4U">
 					<rich:menuItem submitMode="ajax" value="Overview" action="/user/main.xhtml"/>
 					<rich:menuItem submitMode="ajax" value="Logout"
 						action="#{identity.logout}" />
+				</rich:dropDownMenu>
+
+				<rich:dropDownMenu value="Report" rendered="#{s:hasRole('user')}">
+					<rich:menuItem submitMode="ajax" value="Month report"
+						action="#{user.monthReportController.enter}" rendered="#{s:hasRole('user')}" />
 				</rich:dropDownMenu>
 
 				<rich:dropDownMenu value="Admin" rendered="#{s:hasRole('admin')}">
