--- a/server/web/ui/src/main/webapp/css/main.css
+++ b/server/web/ui/src/main/webapp/css/main.css
@@ -117,3 +117,46 @@ div.pboxc a,div.pboxc_s a,div.pboxc_e a {
 div.pboxc a:hover,div.pboxc_s a:hover,div.pboxc_e a:hover {
 	text-decoration: underline;
 }
+
+table.report {
+	background-color:#FFFFFF;
+	border-collapse:collapse;
+	border-left:1px solid #C0C0C0;
+	border-top:1px solid #C0C0C0;
+	empty-cells:show;
+}
+
+thead.report {
+	border-bottom:1px solid #C0C0C0;
+}
+
+th.report {
+	border-right:1px solid #C0C0C0;
+	color:#000000;
+	font-family:Arial,Verdana,sans-serif;
+	font-size:11px;
+	padding:4px;
+	text-align:center;
+	white-space:nowrap;
+}
+
+td.report {
+	border-bottom:1px solid #C0C0C0;
+	border-right:1px solid #C0C0C0;
+	color:#000000;
+	font-family:Arial,Verdana,sans-serif;
+	font-size:11px;
+	padding:4px;
+}
+
+tr.reportHeader {
+	background-color:#ECF4FE;
+}
+
+tr.reportEven {
+	background-color:#FFFFFF;
+}
+
+tr.reportOdd {
+	background-color:#DDDDDD;
+}
