GroupBy Reports working (depth=1)
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@155 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/css/main.css
+++ b/server/web/ui/src/main/webapp/css/main.css
@@ -149,6 +149,11 @@ td.report {
 	padding:4px;
 }
 
+tr.reportGroupHeader {
+	border-top:1px solid #C0C0C0;
+	background-color:#E8F0F8;
+}
+
 tr.reportHeader {
 	background-color:#ECF4FE;
 }
