GroupBy report working (any depth).
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@156 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/css/main.css
+++ b/server/web/ui/src/main/webapp/css/main.css
@@ -149,7 +149,7 @@ td.report {
 	padding:4px;
 }
 
-tr.reportGroupHeader {
+td.reportGroupHeader {
 	border-top:1px solid #C0C0C0;
 	background-color:#E8F0F8;
 }
