--- a/server/web/ui/src/main/webapp/templates/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/templates/main-template.xhtml
@@ -25,6 +25,9 @@
 
 					<rich:menuItem submitMode="ajax" value="Teams"
 						action="#{admin.teamListController.enter}" rendered="#{s:hasRole('admin')}" />
+
+					<rich:menuItem submitMode="ajax" value="Day tags"
+						action="#{admin.dayTagListController.enter}" rendered="#{s:hasRole('admin')}" />
 				</rich:dropDownMenu>
 			</h:panelGrid>
 		</a4j:form>
