--- a/server/web/ui/src/main/webapp/templates/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/templates/main-template.xhtml
@@ -15,8 +15,12 @@
 				</rich:dropDownMenu>
 
 				<rich:dropDownMenu value="Report" rendered="#{s:hasRole('user')}">
-					<rich:menuItem submitMode="ajax" value="Month report"
-						action="#{user.monthReportController.enter}" rendered="#{s:hasRole('user')}" />
+					<rich:menuItem submitMode="ajax" value="Workitem month"
+						action="#{user.reportController.enter('workitem-month-flat')}" rendered="#{s:hasRole('user')}" />
+					<rich:menuItem submitMode="ajax" value="Workitem month by person"
+						action="#{user.reportController.enter('workitem-month-byperson')}" rendered="#{s:hasRole('user')}" />
+					<rich:menuItem submitMode="ajax" value="Workitem month by date/person"
+						action="#{user.reportController.enter('workitem-month-bydateperson')}" rendered="#{s:hasRole('user')}" />
 				</rich:dropDownMenu>
 
 				<rich:dropDownMenu value="Admin" rendered="#{s:hasRole('admin')}">
