Added week parameter and dayinfo report
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@170 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/templates/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/templates/main-template.xhtml
@@ -21,6 +21,11 @@
 						action="#{user.reportController.enter('workitem-month-byperson')}" rendered="#{s:hasRole('user')}" />
 					<rich:menuItem submitMode="ajax" value="Workitem month by date/person"
 						action="#{user.reportController.enter('workitem-month-bydateperson')}" rendered="#{s:hasRole('user')}" />
+					<rich:menuItem submitMode="ajax" value="Dayinfo month"
+						action="#{user.reportController.enter('dayinfo-month-flat')}" rendered="#{s:hasRole('user')}" />
+
+					<rich:menuItem submitMode="ajax" value="Workitem week"
+						action="#{user.reportController.enter('workitem-week-flat')}" rendered="#{s:hasRole('user')}" />
 				</rich:dropDownMenu>
 
 				<rich:dropDownMenu value="Admin" rendered="#{s:hasRole('admin')}">
