--- a/server/web/ui/src/main/webapp/templates/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/templates/main-template.xhtml
@@ -21,8 +21,12 @@
 						action="#{user.reportController.enter('workitem-month-byperson')}" rendered="#{s:hasRole('user')}" />
 					<rich:menuItem submitMode="ajax" value="Workitem month by date/person"
 						action="#{user.reportController.enter('workitem-month-bydateperson')}" rendered="#{s:hasRole('user')}" />
+					<rich:menuItem submitMode="ajax" value="Workitem month of person"
+						action="#{user.reportController.enter('workitem-month-ofperson')}" rendered="#{s:hasRole('user')}" />
 					<rich:menuItem submitMode="ajax" value="Dayinfo month"
 						action="#{user.reportController.enter('dayinfo-month-flat')}" rendered="#{s:hasRole('user')}" />
+					<rich:menuItem submitMode="ajax" value="Dayinfo month by person"
+						action="#{user.reportController.enter('dayinfo-month-byperson')}" rendered="#{s:hasRole('user')}" />
 
 					<rich:menuItem submitMode="ajax" value="Workitem week"
 						action="#{user.reportController.enter('workitem-week-flat')}" rendered="#{s:hasRole('user')}" />
