--- a/server/web/gwt/src/main/resources/de/objectcode/time4u/server/gwt/utils/public/utils/themes/standard/standard.css
+++ b/server/web/gwt/src/main/resources/de/objectcode/time4u/server/gwt/utils/public/utils/themes/standard/standard.css
@@ -1,7 +1,13 @@
-.dataTable-row {
+.utils-dataTable-row {
 	cursor: pointer;
 }
 
-.dataTable-row-selected {
+.utils-dataTable-row-selected {
   background: #93c2f1 url(images/hborder.png) repeat-x 0px -1463px;
+}
+
+.utils-loadingLabel {
+  background-image: url(images/loading.gif);
+  background-repeat: no-repeat;
+  padding-left: 20px;
 }
