Fixed Transaction annotation

--- a/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
+++ b/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
@@ -1,13 +1,19 @@
+.utils-dataTable-header {
+	text-align: left;
+	background: transparent url(images/hborder.png) repeat-x 0px -1463px;
+}
+
 .utils-dataTable-row {
 	cursor: pointer;
 }
 
 .utils-dataTable-row-selected {
-  background: #93c2f1 url(images/hborder.png) repeat-x 0px -1463px;
+	cursor: pointer;
+	background: #93c2f1 url(images/hborder.png) repeat-x 0px -1463px;
 }
 
 .utils-loadingLabel {
-  background-image: url(images/loading.gif);
-  background-repeat: no-repeat;
-  padding-left: 20px;
+	background-image: url(images/loading.gif);
+	background-repeat: no-repeat;
+	padding-left: 20px;
 }
