Some more dialog functionality

--- a/server/web/gwt/src/main/webapp/MainUI.css
+++ b/server/web/gwt/src/main/webapp/MainUI.css
@@ -44,3 +44,13 @@ h1 {
 .dayPickerDayZeroRegular {
 	color: red;
 }
+
+.projectTree-active {
+	color: black;
+}
+
+.projectTree-inactive {
+	color: gray;
+}
+
+
