--- a/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
+++ b/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
@@ -22,11 +22,80 @@
 .gwt-SplitLayoutPanel-HDragger {
 	cursor: col-resize;
 	background-color: #E3E8F3 !important;
-	background: #E3E8F3 url(images/splitPanelThumb.png) no-repeat center !important;
+	background: #E3E8F3 url(images/splitPanelThumb.png) no-repeat center
+		!important;
 }
 
 .gwt-SplitLayoutPanel-VDragger {
 	cursor: row-resize;
 	background-color: #E3E8F3 !important;
-	background: #E3E8F3 url(images/splitPanelThumb.png) no-repeat center !important;
+	background: #E3E8F3 url(images/splitPanelThumb.png) no-repeat center
+		!important;
+}
+
+.utils-MenuBarPopup {
+	margin: 0px 0px 0px 3px;
+}
+
+.utils-MenuBarPopup .popupTopCenter {
+	background: url(images/hborder.png) 0px -12px repeat-x;
+}
+
+.utils-MenuBarPopup .popupBottomCenter {
+	background: url(images/hborder.png) 0px -13px repeat-x;
+	-background: url(images/hborder_ie6.png) 0px -13px repeat-x;
+}
+
+.utils-MenuBarPopup .popupMiddleLeft {
+	background: url(images/vborder.png) -12px 0px repeat-y;
+	-background: url(images/vborder_ie6.png) -12px 0px repeat-y;
+}
+
+.utils-MenuBarPopup .popupMiddleRight {
+	background: url(images/vborder.png) -13px 0px repeat-y;
+	-background: url(images/vborder_ie6.png) -13px 0px repeat-y;
+}
+
+.utils-MenuBarPopup .popupTopLeftInner {
+	width: 5px;
+	height: 5px;
+	zoom: 1;
+}
+
+.utils-MenuBarPopup .popupTopRightInner {
+	width: 8px;
+	height: 5px;
+	zoom: 1;
+}
+
+.utils-MenuBarPopup .popupBottomLeftInner {
+	width: 5px;
+	height: 8px;
+	zoom: 1;
+}
+
+.utils-MenuBarPopup .popupBottomRightInner {
+	width: 8px;
+	height: 8px;
+	zoom: 1;
+}
+
+.utils-MenuBarPopup .popupTopLeft {
+	background: url(images/corner.png) no-repeat 0px -36px;
+	-background: url(images/corner_ie6.png) no-repeat 0px -36px;
+}
+
+.utils-MenuBarPopup .popupTopRight {
+	background: url(images/corner.png) no-repeat -5px -36px;
+	-background: url(images/corner_ie6.png) no-repeat -5px -36px;
+}
+
+.utils-MenuBarPopup .popupBottomLeft {
+	background: url(images/corner.png) no-repeat 0px -41px;
+	-background: url(images/corner_ie6.png) no-repeat 0px -41px;
+}
+
+.utils-MenuBarPopup .popupBottomRight {
+	background: url(images/corner.png) no-repeat -5px -41px;
+	-background: url(images/corner_ie6.png) no-repeat -5px -41px;
 }
