--- a/server/web/gwt/war/MainUI.css
+++ b/server/web/gwt/war/MainUI.css
@@ -69,3 +69,10 @@ td.mainMenu-userId {
 	color: #444444;
 	font-weight: bold;
 }
+.gwt-Label {
+	color: black;
+	background-color: #dddddd;
+}
+.utils-dataTable_header {
+	
+}
