--- a/server/web/gwt/war/MainUI.css
+++ b/server/web/gwt/war/MainUI.css
@@ -73,6 +73,8 @@ td.mainMenu-userId {
 	color: black;
 	background-color: #dddddd;
 }
-.utils-dataTable_header {
-	
+table.workItemTable {
+	border:2px solid red;
+	padding:0;
+	margin:0 important;
 }
