--- a/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
+++ b/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
@@ -44,9 +44,14 @@
 }
 
 .utils-loadingLabel {
-	background-image: url(images/loading.gif);
+	background-color: #000000;
+	background-image: url(images/loading2.gif);
 	background-repeat: no-repeat;
-	padding-left: 20px;
+	background-position: center;
+	opacity: 0.3;
+	padding-left: 20px;	
+	display: block;
+	cursor: wait;
 }
 
 /* Splitters */
