LoadingPanel working solution

--- a/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
+++ b/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
@@ -43,6 +43,11 @@
 	height: 1.5em;
 }
 
+.utils-loadingLabel-block {
+	display: block;
+	cursor: wait;
+}
+
 .utils-loadingLabel {
 	background-color: #000000;
 	background-image: url(images/loading2.gif);
