--- a/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
+++ b/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
@@ -49,12 +49,12 @@
 }
 
 .utils-loadingLabel {
-	background-color: #000000;
-	background-image: url(images/loading2.gif);
+	background-color: #CCCCCC;
+	background-image: url(images/loading.gif);
 	background-repeat: no-repeat;
 	background-position: center;
-	opacity: 0.3;
 	padding-left: 20px;	
+	opacity: 0.8;
 	display: block;
 	cursor: wait;
 }
