--- a/server/web/gwt/war/MainUI.css
+++ b/server/web/gwt/war/MainUI.css
@@ -71,22 +71,30 @@ td.mainMenu-userId {
 }
 .gwt-Label {
 	color: black;
-	background-color: #dddddd;
 }
-table.workItemTable {
+table.utils-dataTable {
 	border-spacing:0;
 	color: #333333;
+	padding:5px;
 }
-table.workItemTable th {
-	margin: 3px;
+table.utils-dataTable .utils-dataTable-header th {
+	margin: 5px;
 	font-size: 13px;
 	font-weight: normal;
 	background: #E3E8F3 url(images/hborder.png) repeat-x scroll 0 -2003px;
 	border:1px solid #bbbbbb;
-	border-left: 0;
+	
+}
+.webclient-panelTitle {
+	padding-left: 10px;
+	padding-top:4px;
+	height: 22px;
+	background: #e9e9e9 url(images/utils_reiter.gif) no-repeat;
 }
 
-table.workItemTable tr {
-	border-bottom: 1px solid #666666;	
+.webclient-PunchContent,
+.webclient-StatisticsContent {
+	background-color: #e8e8e8;
+	padding:5px;
 }
 
