--- a/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
+++ b/server/web/gwt/src/main/resources/de/objectcode/time4u/server/web/gwt/utils/public/utils/themes/standard/standard.css
@@ -1,3 +1,8 @@
+.utils-dataTable-base {
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 10px;	
+}
+
 .utils-dataTable-header {
 	text-align: left;
 	background: transparent url(images/hborder.png) repeat-x 0px -1463px;
@@ -7,21 +12,25 @@
 	cursor: pointer;
 }
 
-.utils-dataTable-header-ascending {
+.utils-dataTable-header-ascending span {
 	cursor: pointer;
+	width: 100%;
+	display: block;
 	background: transparent url(images/bulletDown.gif) no-repeat;
 	background-position:center right;
 }
 
-.utils-dataTable-header-descending {
+.utils-dataTable-header-descending span {
 	cursor: pointer;
+	width: 100%;
+	display: block;
 	background: transparent url(images/bulletUp.gif) no-repeat;
 	background-position:center right;
 }
 
 .utils-dataTable-row {
 	cursor: pointer;
-	height: 1.2em;
+	height: 1.4em;
 }
 
 .utils-dataTable-row-odd {
@@ -34,13 +43,13 @@
 
 .utils-dataTable-row-selected {
 	cursor: pointer;
-	height: 1.2em;
+	height: 1.4em;
 	background: #93c2f1 url(images/hborder.png) repeat-x 0px -1463px;
 }
 
 .utils-dataTable-row-empty {
 	cursor: default;
-	height: 1.2em;
+	height: 1.4em;
 }
 
 .utils-loadingLabel-block {
@@ -144,21 +153,30 @@
 }
 
 .utils-dataPager {
-	background: #E3E8F3 url(images/hborder.png) repeat-x scroll 0 -2003px
+	background: #E3E8F3 url(images/hborder.png) repeat-x scroll 0 -2003px;
 }
 
-a.utils-dataPager-page,a.utils-dataPager-page:visited {
+.utils-dataPager td {
+	width: 20px;
+	height: 20px;
+	border: 1px solid #ccc;
+	text-align: center;
+}
+.utils-dataPager td:hover {
+	background-color: #eee;
+	cursor: pointer;
+}
+.utils-dataPager-page a,
+.utils-dataPager-page a:visited {
 	color: #666666;
 	text-decoration: none;
 }
 
-a.utils-dataPager-page:hover {
-	color: black;
-	text-decoration: none;
+.utils-dataPager-currentPage {
+	border: 1px solid white;
+	background-color: white;
 }
-
-a.utils-dataPager-currentPage,a.utils-dataPager-currentPage:visited,a.utils-dataPager-currentPage:hover
-	{
+.utils-dataPager-currentPage a {
 	color: black;
 	font-weight: bold;
 	text-decoration: none;
