--- a/server/web/gwt/src/main/webapp/MainUI.css
+++ b/server/web/gwt/src/main/webapp/MainUI.css
@@ -1,36 +1,34 @@
 /** Add css rules here for your application. */
-
-
-/** Example rules used by the template application (remove for your app) */
+	/** Example rules used by the template application (remove for your app) */
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+	font-size: 2em;
+	font-weight: bold;
+	color: #777777;
+	margin: 40px 0px 70px;
+	text-align: center;
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+	display: block;
+	font-size: 16pt;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+	width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+	margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+	color: red;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+	margin: 15px 6px 6px;
 }
 
 .dayPickerDayIsHasWorkItems {
@@ -53,7 +51,6 @@ h1 {
 	color: gray;
 }
 
-
 td.mainMenu-userId {
 	width: 100%;
 	text-align: right;
@@ -72,4 +69,58 @@ td.mainMenu-userId {
 	color: #444444;
 	font-weight: bold;
 }
+.gwt-Label {
+	color: black;
+}
+table.utils-dataTable {
+	border-spacing:0;
+	color: #333333;
+	padding:5px;
+}
+table.utils-dataTable .utils-dataTable-header th {
+	margin: 5px;
+	font-size: 13px;
+	font-weight: normal;
+	background: #E3E8F3 url(images/hborder.png) repeat-x scroll 0 -2003px;
+	border:1px solid #bbbbbb;
+	
+}
+.webclient-panelTitle {
+	padding-left: 10px;
+	height: 22px;
+	background: #e9e9e9 url(images/utils_reiter.gif) no-repeat;
+}
 
+.webclient-PunchContent,
+.webclient-StatisticsContent {
+	background-color: #e8e8e8;
+	padding:5px;
+}
+
+.gwt-TabLayoutPanelTabs {
+	border-bottom: 1px solid #ccc;
+}
+.gwt-TabLayoutPanelTab {
+	border: 1px solid #ccc;
+	border-bottom: 0;
+	background: #E3E8F3 url(images/hborder.png) repeat-x scroll 0 -2003px;
+	padding: 5px;
+	font-weight: normal;
+	width: 80px;
+	text-align: center;
+	cursor: pointer;
+	margin-left: 3px;
+}
+
+.gwt-TabLayoutPanelTab-selected {
+	border: 1px solid #ccc;
+	border-bottom: 0;
+	background: #93c2f1 url(images/hborder.png) repeat-x 0px -1463px;
+	font-weight: bold;
+}
+
+.dataDetailBox {
+	margin: 10px;
+	padding: 5px;
+	border: 1px solid #ccc;	
+}
